# POC

./: mern.sh  readme.md  report.md
EspeenStack/: readme.md
EspeenStack/back-end/: index.html  styles.css
EspeenStack/front-end/espeen/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
FRPS/: readme.md
FRPS/PoC-Release/: .env  Dockerfile  readme  requirements.txt
FRPS/PoC-Release/app/: __init__.py  __main__.py  auth.py  main.py  models.py
FRPS/PoC-Release/instance/: db.sqlite
FRPS/basic/: Dockerfile-dev  Dockerfile-prod  docker-compose.yaml
FRPS/basic/app/: __init__.py  __main__.py
FRPS/basic/instance/: db.sqlite
FRPS/legacy/: README.md  configure  docker-compose.yaml
FRPS/legacy/app/: __init__.py  auth.py  db_create.py  security.py
FRPS/legacy/dev/: run
FRPS/legacy/docker/: Dockerfile-backend-dev  Dockerfile-backend-prod  Dockerfile-dev  Dockerfile-prod  docker-compose-dev.yaml  docker-compose-prod.yaml
FRPS/legacy/env/: .env-prod.aes  .env.aes  .env_template.aes  edit_env  read_env
FRPS/templates/: docker-compose.yaml
MERN/: .gitignore  package-lock.json  package.json  readme.md
MERN/back-end/: app.js
MERN/back-end/config/: dbConfig.js
MERN/back-end/controllers/: authController.js  userController.js
MERN/back-end/middlewares/: errors.js  userAuthentication.js
MERN/back-end/models/: userModel.js
MERN/front-end/: package-lock.json  package.json
Rust/: .gitignore  package-lock.json  readme.md
Rust/back-end/: Cargo.toml  LICENSE
Rust/back-end/src/: main.rs
Rust/uploads/: db.sql
(+42 files in other folders)
